--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Resume Builder</h1>
+    <h1>Resume Builder Editable</h1>
     <form id="resumeform">
         <fieldset>
             <legend>Information</legend>
